-
Bug
-
Resolution: Done
-
P2: Important
-
6.3.1, 6.4.0 Beta2
-
None
-
Windows Version: Win11 22H2, Qt Version: 6.3.1 MSVC 2019 64bit/6.4.0 MSVC 2019 64bit
-
-
70096b2bb (dev), 24f6eaa11 (6.7), c535fcc59 (6.6), a2d89f85e (tqtc/lts-6.5)
How to reproduce this bug:
1.creates a Qt Widgets Application.
2.Add a text edit to your main window, and set it "readOnly".
3.Build this project (using Qt 6.3.1/6.4.0) and Run it.
Or you can skip the three steps above, just launch attached example qtbugexample.zip(built on Qt6.3.1)
4.Switch you IME to Chinese. (I'm using the default Chinese IME for Windows. For your convenience, you can see this video How to Use the Pinyin Keyboard on Windows 10 - Typing in Chinese - YouTube as a tutorial.)
5.Randomly press some keys(a~z).
Expected behavior:
Because the text edit is set to "readOnly", the input method eiitor should not be activated at this time. (In Qt 5.15.2, it works exactly this way)
Actual behavior:
The IME is activated(as shown in attached image). After you press some keys, press "1"(The function is to select the first candidate word.). The selected word will insert into text edit(as shown in the second image).
- relates to
-
QTBUG-110838 edit components ReadOnly invalid via some input method
-
- Closed
-
-
QTBUG-119182 Readonly QLineEdit writable using input method
-
- Closed
-
| For Gerrit Dashboard: QTBUG-105009 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 542900,2 | QWidget: check WA_InputMethodEnabled in handling IM queries in Windows | dev | qt/qtbase | Status: ABANDONED | -1 | 0 |
| 543188,9 | Implement Qt::ImEnabled by isEnabled() and isReadOnly() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 544341,2 | Implement Qt::ImEnabled by isEnabled() and isReadOnly() | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 544429,2 | Implement Qt::ImEnabled by isEnabled() and isReadOnly() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
| 544641,2 | Implement Qt::ImEnabled by isEnabled() and isReadOnly() | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |